--- a/gui/src/main/resources/pwr/ite/bedrylo/gui/main-view.fxml
+++ b/gui/src/main/resources/pwr/ite/bedrylo/gui/main-view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane dividerPositions="0.3" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pwr.ite.bedrylo.gui.controller.mainController">
+<SplitPane dividerPositions="0.3" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="500.0" minWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pwr.ite.bedrylo.gui.controller.mainController">
    <items>
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
